<resources>
    <string name="app_name">Datos Personales</string>
    <string name="txtDatosPersonales">Datos Personales</string>
    <string name="hintNombre">Escribe tu nombre</string>
    <string name="hintApellidos">Escribe tus apellidos</string>
    <string name="hintEdad">Indica tu edad</string>
    <string name="radio_hombre">Hombre</string>
    <string name="radio_mujer">Mujer</string>
    <string name="sw_hijos">Hijos</string>
    <string name="No">No</string>
    <string name="Sí">Sí</string>
    <string-array name="estado_civil">
        <item>Estado Civil</item>
        <item>Solter@</item>
        <item>Casad@</item>
        <item>Separad@</item>
        <item>Viud@</item>
        <item>Otr@</item>
    </string-array>
    <string name="btnNotificacion">Enviar</string>
    <string name="btnClear">Borrar</string>

    <!-- Mensajes de error -->
    <string name="error_nombre">Debe introducir un nombre</string>
    <string name="error_apellidos">Debe introducir un apellido</string>
    <string name="error_edad">Debe introducir una edad válida</string>
    <string name="error_sexo">Debe seleccionar un sexo</string>
    <string name="error_estado_civil">Debe seleccionar un estado civil</string>

    <!-- Mensajes Toast -->
    <string name="mayor_edad">mayor de edad</string>
    <string name="menor_edad">menor de edad</string>
    <string name="con_hijos">con hijos</string>
    <string name="sin_hijos">sin hijos</string>
    <string name="borrar_campos">Campos borrados</string>

</resources>